# SoftSysJPEG

./: README.md
docs/: jpeg_file_breakdown.md
reports/: proposal.md  report.md  update.md
src/: BMP.h  CMakeLists.txt  JPEG.h  a.out  bmp_to_jpg.c  cbmp.c  cvector.h  dct.c  display_img.c  encoding_tables.h  huffman.c  jpegcompress.c  makefile  priority_queue.c  priority_queue.h  quantization.c  read_bmp_to_array.c  read_print_hex.c  run_length_encoding.c  test.c
