cmake_minimum_required(VERSION 3.2)
project(JPEG)
include_directories(../include)
add_executable(read_print_hex read_print_hex.c)
add_executable(read_bmp_to_array read_bmp_to_array.c)
add_executable(quantization quantization.c)
target_link_libraries(quantization gsl m)
add_executable(run_length_encoding run_length_encoding.c)
target_link_libraries(run_length_encoding gsl m)
add_executable(dct dct.c)
target_link_libraries(dct gsl m)
add_executable(priority_queue priority_queue.c)
add_executable(bmp_to_jpg bmp_to_jpg.c)
